# FluxElement-Router

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindPipeWire.cmake
res/: resources.qrc
src/: PipeWireManager.cpp  PipeWireManager.h  PipeWireUIModel.cpp  PipeWireUIModel.h  main.cpp
src/PipeWire/: Context.cpp  Context.h  Core.cpp  Core.h  Loop.cpp  Loop.h  Registry.cpp  Registry.h  Utils.h
src/Utils/: Event.h
ui/: Main.qml  PipeWireNode.qml
ui/screens/: Home.qml  PipewireRouting.qml  WelcomeScreen.qml
